--- a/index.html
+++ b/index.html
@@ -28,30 +28,171 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p><img src="http://i.imgur.com/1mIkcUy.jpg" alt="#Arduino Buzz Library"></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p><strong>Arduino just got motion detection - with nothing but a wire!</strong></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><strong><a href="https://www.youtube.com/watch?v=4KjB-HMuUs4">VIDEO DEMONSTRATION</a></strong></p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>By monitoring the amplitude of AC electricity waveforms in the air for changes, Buzz provides motion detection using only a wire! It's extremely easy to implement, and a perfect library for all experience levels.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<hr>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h1>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h1>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>The Buzz library is just for experimental use only, and is <strong>not</strong> intended for providing a home/business security solution.</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<hr>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h1>
+<a id="contents" class="anchor" href="#contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contents</h1>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li><a href="#explanation">Explanation</a></li>
+<li><a href="#installation">Installation</a></li>
+<li><a href="#usage">Usage</a></li>
+<li><a href="#functions">Functions</a></li>
+<li><a href="#limitations">Limitations</a></li>
+<li><a href="#contributing">Contributing</a></li>
+<li><a href="#license-and-credits">License and credits</a></li>
+</ul>
+
+<hr>
+
+<h1>
+<a id="explanation" class="anchor" href="#explanation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explanation</h1>
+
+<p>Due to the ATMega328p's ADC being very high impedance, it can easily detect the AC electricity waves that leak into the air via open outlets, bad shielding, and more.</p>
+
+<p>When something statically charged (human, pet, blanket, etc.) passes near the antenna, it increases or decreases the voltage perceived at the input. Even without rubbing a balloon on your head, you'll always have enough static charge to affect this value a measurable amount.</p>
+
+<p>The Buzz library allows you to easily monitor these changes, and attach your own functions that will execute when motion exceeds a specified threshold.</p>
+
+<hr>
+
+<h1>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
+
+<p><del>With Arduino Library Manager:</del> <strong>Coming soon!</strong></p>
+
+<p><del>1. Open <em>Sketch &gt; Include Library &gt; Manage Libraries</em> in the Arduino IDE.</del></p>
+
+<p><del>2. Search for "Buzz", (look for "Connor Nishijima") and select the latest version.</del></p>
+
+<p><del>3. Click the Install button and Arduino will prepare the library and examples for you!</del></p>
+
+<p><strong>Manual Install:</strong></p>
+
+<ol>
+<li>Click "Clone or Download" above to get an "arduino-buzz-master.zip" file.</li>
+<li>Extract it's contents to the libraries folder in your sketchbook.</li>
+<li>Rename the folder from "arduino-buzz-master" to "Buzz".</li>
+</ol>
+
+<hr>
+
+<h1>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h1>
+
+<p>Using the Buzz library is very simple, you only need the following to get started:</p>
+
+<pre><code>#include "Buzz.h" // Include the Volume library
+Buzz buzz;
+
+void setup() {
+  Serial.begin(115200);
+  buzz.begin(A0,60,3000);
+}
+void loop() {
+  Serial.println(buzz.level());
+  delay(1);
+}
+</code></pre>
+
+<p>Next, connect a wire/jumper (6-12") to pin A0, and open the Arduino IDE's Serial Plotter to see the current motion value! Try waving your hand near the antenna, or walking past it.</p>
+
+<hr>
+
+<h1>
+<a id="functions" class="anchor" href="#functions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Functions</h1>
+
+<p><strong>Buzz buzz</strong>;</p>
+
+<p>This initializes the Buzz library after import. "buzz" can be any word you want, as long as it's reflected in the rest of your code.</p>
+
+<p><strong>buzz.begin</strong>(byte <strong>pin</strong>, byte <strong>hz</strong>, unsigned int <strong>coolDown</strong>);</p>
+
+<p>This sets up a Timer Compare Interrupt on Timer1 for logging motion changes. It watches the ADC input defined by <strong>pin</strong>, does phase cancellation for <strong>hz</strong> AC to remove sine-wave artifacts from the data, and waits for <strong>coolDown</strong> milliseconds for the ADC to stabilize before triggering any alarms.</p>
+
+<p><strong>buzz.end</strong>();</p>
+
+<p>This clears the Timer1 ISR that checks motion, essentially stopping all Buzz execution.</p>
+
+<p><strong>buzz.level</strong>();</p>
+
+<p>Returns the current motion level as a signed integer, with a minor motion giving a value of ~10, and more major motions returning ~100 or more.</p>
+
+<p><code>buzz.level()</code> can be both positive or negative depending on if the motion was towards the antenna or away from it! Use <code>abs(buzz.level())</code> to get all values as positive.</p>
+
+<p><strong>buzz.setAlarm</strong>(void <strong>action</strong>, unsigned int <strong>threshold</strong>, unsigned int <strong>hold</strong>);</p>
+
+<p>Used to set the user-provided function as the callback for an alarm trigger. If motion is &gt;= to <strong>threshold</strong>, and an alarm hasn't been triggered for <strong>hold</strong> milliseconds, the function <strong>action</strong> will be called. If the function you wrote is this helloWorld() demo:</p>
+
+<pre><code>void helloWorld(){
+  Serial.println("Hello world!");
+}
+</code></pre>
+
+<p>You would write <code>setAlarm()</code> like this:</p>
+
+<pre><code>buzz.setAlarm(helloWorld, 20, 500);
+</code></pre>
+
+<p>A current limitation is that arguments/parameters cannot be passed to the alarm function, and the function can't return data either - though a workaround is to set those values in global variables and read them wherever else your need to, inside or outside the alarm function. See <a href="#limitations">Limitations</a>.</p>
+
+<p><strong>buzz.checkAlarm</strong>();</p>
+
+<p>This is used to see if the alarm flag has been set by Buzz. This function should be called as often as possible, and your code should avoid blocking functions like delay(). If the flag has been set true by motion exceding your custom threshold, the function defined in setAlarm() will be called.</p>
+
+<p><strong>buzz.printData</strong>()</p>
+
+<p>This renders a graph to the Arduino IDE Serial Plotter containing current motion levels, your threshold for alarm, and marks when alarms were triggered. Nothing will appear in the plotter until the <strong>coolDown</strong> from <code>buzz.begin()</code> has passed.</p>
+
+<hr>
+
+<h1>
+<a id="limitations" class="anchor" href="#limitations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Limitations</h1>
+
+<p>Unfortunately, a solution this simple has it's caveats:</p>
+
+<p><strong>Buzz is susceptable to false positives:</strong></p>
+
+<p>Because we're relying on AC and static electricity for our readings, it's trivial to cause interference to the input by turning on power appliances nearby, or picking up local lighting strikes. (Though the latter is a cool use as well!)</p>
+
+<p><strong>Buzz loves cats:</strong></p>
+
+<p>While a human like yourself always has enough static charge to cause a measurable shift in ADC voltage, cats are covered in electron-loving fur. It's much more sensitive to them! A solution is to make your cat wear an anti-static soldering strap at all times, but so far I've been unsuccessful in implementing this. We're working on it.</p>
+
+<p><strong>Phase cancellation has only been tested with 60Hz AC</strong></p>
+
+<p>While it shouldn't make a huge difference without it, the phase cancellation has been <strong>tested</strong> for 60Hz AC, and <strong>calculated</strong> for 50Hz AC. 50Hz users may want to report results back to me if the defaults need changes.</p>
+
+<hr>
+
+<h1>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h1>
+
+<p>Any advice or pull requests are welcome! :)</p>
+
+<hr>
+
+<h1>
+<a id="license-and-credits" class="anchor" href="#license-and-credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License and Credits</h1>
+
+<p><strong>Developed by Connor Nishijima (2016)</strong></p>
+
+<p><strong>Released under the <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3 license</a>.</strong></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/connornishijima">connornishijima</a></p>
